--- a/sqli-detection_v1.ipynb
+++ b/sqli-detection_v1.ipynb
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1448,6 +1448,7 @@
     }
    ],
    "source": [
+    "import pickle\n",
     "def sql_detect(query):\n",
     "    with open('sql.pkl', 'rb') as model_file:\n",
     "        load_model=pickle.load(model_file)\n",
@@ -1461,7 +1462,7 @@
     "\n",
     "    return \"SQL Injection Detected\" if predict[0]==1 else \"Safe\"\n",
     "\n",
-    "print(sql_detect(\" select * from users where id  =  '1' or @ @1  =  1 union select 1,version  (    )   -- 1'\"))"
+    "print(sql_detect(\"? or 1  =  1 --\"))"
    ]
   }
  ],
