feat: new model using neural network

--- a/sqli-detection_v1.ipynb
+++ b/sqli-detection_v1.ipynb
@@ -1436,14 +1436,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SQL Injection Detected\n"
+      "Safe\n"
      ]
     }
    ],
@@ -1462,7 +1462,7 @@
     "\n",
     "    return \"SQL Injection Detected\" if predict[0]==1 else \"Safe\"\n",
     "\n",
-    "print(sql_detect(\"? or 1  =  1 --\"))"
+    "print(sql_detect(\"SELECT * from table where id =1 union select 1,2,3--\"))"
    ]
   }
  ],
