feat: improve begin

--- a/data_for_training_CNN_improve_begin/sqli-detection.ipynb
+++ b/data_for_training_CNN_improve_begin/sqli-detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "550aaa27",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e9c00286",
    "metadata": {},
    "outputs": [
@@ -29,104 +29,71 @@
     }
    ],
    "source": [
-    "\n",
     "import keras\n",
     "from keras.models import load_model\n",
     "import pickle\n",
+    "\n",
+    "# Load model và vectorizer\n",
     "mymodel = load_model('./my_model_additional_sqli_benign_data.h5')\n",
     "myvectorizer = pickle.load(open(\"./vectorizer_additional_sqli_benign_data\", 'rb'))\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
+    "# Hàm làm sạch dữ liệu đầu vào\n",
     "def clean_data(input_val):\n",
-    "\n",
-    "    input_val=input_val.replace('\\n', '')\n",
-    "    input_val=input_val.replace('%20', ' ')\n",
-    "    input_val=input_val.replace('=', ' = ')\n",
-    "    input_val=input_val.replace('((', ' (( ')\n",
-    "    input_val=input_val.replace('))', ' )) ')\n",
-    "    input_val=input_val.replace('(', ' ( ')\n",
-    "    input_val=input_val.replace(')', ' ) ')\n",
-    "    input_val=input_val.replace('1 ', 'numeric')\n",
-    "    input_val=input_val.replace(' 1', 'numeric')\n",
-    "    input_val=input_val.replace(\"'1 \", \"'numeric \")\n",
-    "    input_val=input_val.replace(\" 1'\", \" numeric'\")\n",
-    "    input_val=input_val.replace('1,', 'numeric,')\n",
-    "    input_val=input_val.replace(\" 2 \", \" numeric \")\n",
-    "    input_val=input_val.replace(' 3 ', ' numeric ')\n",
-    "    input_val=input_val.replace(' 3--', ' numeric--')\n",
-    "    input_val=input_val.replace(\" 4 \", ' numeric ')\n",
-    "    input_val=input_val.replace(\" 5 \", ' numeric ')\n",
-    "    input_val=input_val.replace(' 6 ', ' numeric ')\n",
-    "    input_val=input_val.replace(\" 7 \", ' numeric ')\n",
-    "    input_val=input_val.replace(\" 8 \", ' numeric ')\n",
-    "    input_val=input_val.replace('1234', ' numeric ')\n",
-    "    input_val=input_val.replace(\"22\", ' numeric ')\n",
-    "    input_val=input_val.replace(\" 8 \", ' numeric ')\n",
-    "    input_val=input_val.replace(\" 200 \", ' numeric ')\n",
-    "    input_val=input_val.replace(\"23 \", ' numeric ')\n",
-    "    input_val=input_val.replace('\"1', '\"numeric')\n",
-    "    input_val=input_val.replace('1\"', '\"numeric')\n",
-    "    input_val=input_val.replace(\"7659\", 'numeric')\n",
-    "    input_val=input_val.replace(\" 37 \", ' numeric ')\n",
-    "    input_val=input_val.replace(\" 45 \", ' numeric ')\n",
-    "\n",
+    "    input_val = input_val.replace('\\n', '')\n",
+    "    input_val = input_val.replace('%20', ' ')\n",
+    "    input_val = input_val.replace('=', ' = ')\n",
+    "    input_val = input_val.replace('((', ' (( ')\n",
+    "    input_val = input_val.replace('))', ' )) ')\n",
+    "    input_val = input_val.replace('(', ' ( ')\n",
+    "    input_val = input_val.replace(')', ' ) ')\n",
+    "    input_val = input_val.replace('1 ', 'numeric')\n",
+    "    input_val = input_val.replace(' 1', 'numeric')\n",
+    "    input_val = input_val.replace(\"'1 \", \"'numeric \")\n",
+    "    input_val = input_val.replace(\" 1'\", \" numeric'\")\n",
+    "    input_val = input_val.replace('1,', 'numeric,')\n",
+    "    input_val = input_val.replace(\" 2 \", \" numeric \")\n",
+    "    input_val = input_val.replace(' 3 ', ' numeric ')\n",
+    "    input_val = input_val.replace(' 3--', ' numeric--')\n",
+    "    input_val = input_val.replace(\" 4 \", ' numeric ')\n",
+    "    input_val = input_val.replace(\" 5 \", ' numeric ')\n",
+    "    input_val = input_val.replace(' 6 ', ' numeric ')\n",
+    "    input_val = input_val.replace(\" 7 \", ' numeric ')\n",
+    "    input_val = input_val.replace(\" 8 \", ' numeric ')\n",
+    "    input_val = input_val.replace('1234', ' numeric ')\n",
+    "    input_val = input_val.replace(\"22\", ' numeric ')\n",
+    "    input_val = input_val.replace(\" 8 \", ' numeric ')\n",
+    "    input_val = input_val.replace(\" 200 \", ' numeric ')\n",
+    "    input_val = input_val.replace(\"23 \", ' numeric ')\n",
+    "    input_val = input_val.replace('\"1', '\"numeric')\n",
+    "    input_val = input_val.replace('1\"', '\"numeric')\n",
+    "    input_val = input_val.replace(\"7659\", 'numeric')\n",
+    "    input_val = input_val.replace(\" 37 \", ' numeric ')\n",
+    "    input_val = input_val.replace(\" 45 \", ' numeric ')\n",
     "    return input_val\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "def predict_sqli_attack():\n",
-    "\n",
-    "    repeat=True\n",
-    "\n",
-    "    beautify=''\n",
-    "    for i in range(20):\n",
-    "        beautify+= \"=\"\n",
-    "\n",
+    "# Hàm dự đoán với input được truyền trực tiếp\n",
+    "def predict_sqli_attack(input_val):\n",
+    "    beautify = '=' * 20\n",
     "    print(beautify)\n",
-    "    input_val=input(\"Kiểm tra sữ liệu đầu vào : \")\n",
+    "    print(f\"Kiểm tra sữ liệu đầu vào: {input_val}\")\n",
     "    print(beautify)\n",
     "\n",
+    "    if input_val == '0':\n",
+    "        print(\"Good Bye\")\n",
+    "        return\n",
     "\n",
-    "    if input_val== '0':\n",
-    "        repeat=False\n",
-    "\n",
-    "\n",
-    "\n",
-    "    input_val=clean_data(input_val)\n",
-    "    input_val=[input_val]\n",
-    "\n",
-    "\n",
-    "\n",
-    "    input_val=myvectorizer.transform(input_val).toarray()\n",
-    "\n",
-    "    result=mymodel.predict(input_val)\n",
-    "\n",
+    "    input_val = clean_data(input_val)\n",
+    "    input_vector = myvectorizer.transform([input_val]).toarray()\n",
+    "    result = mymodel.predict(input_vector)\n",
     "\n",
     "    print(beautify)\n",
     "\n",
+    "    if result > 0.5:\n",
+    "        print(\"\\033[91mCảnh báo !!! Phát hiện SQL injection\\033[0m\")\n",
+    "    else:\n",
+    "        print(\"Input an toàn\")\n",
     "\n",
-    "    if repeat == True:\n",
-    "\n",
-    "        if result>0.5:\n",
-    "            print(\"\\033[91mCảnh báo !!! Phát hiện SQL injection\\033[0m\")\n",
-    "\n",
-    "\n",
-    "        elif result<=0.5:\n",
-    "            print(\"Input an toàn\")\n",
-    "\n",
-    "        print(beautify)\n",
-    "\n",
-    "        predict_sqli_attack()\n",
-    "\n",
-    "    elif repeat == False:\n",
-    "        print( \" Good Bye \")\n"
+    "    print(beautify)\n"
    ]
   },
   {
@@ -135,7 +102,9 @@
    "id": "28d99f28",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "predict_sqli_attack(input_val)"
+   ]
   }
  ],
  "metadata": {
